# protobag

./: .dockerignore  .gitignore  .gitmodules  ProtobagCocoa.podspec.json  README.md  pb-dev
.circleci/: config.yml
c++/: CMakeLists.txt  protobag_version.txt
c++/protobag/: ProtobagMsg.pb.cc
c++/protobag/protobag/: ArchiveUtil.cpp  ArchiveUtil.hpp  BagIndexBuilder.cpp  BagIndexBuilder.hpp  BagMetaBuilder.cpp  BagMetaBuilder.hpp  Entry.cpp  Entry.hpp  Protobag.cpp  Protobag.hpp  ReadSession.cpp  ReadSession.hpp  WriteSession.cpp  WriteSession.hpp
c++/protobag/protobag/Utils/: IterProducts.hpp  PBUtils.cpp  PBUtils.hpp  Result.hpp  StdMsgUtils.hpp  Tempfile.cpp  Tempfile.hpp  TimeSync.cpp  TimeSync.hpp  TopicTime.hpp
c++/protobag/protobag/archive/: Archive.cpp  Archive.hpp  DirectoryArchive.cpp  DirectoryArchive.hpp  LibArchiveArchive.cpp  LibArchiveArchive.hpp  MemoryArchive.cpp  MemoryArchive.hpp
c++/protobag/protobag_msg/: ProtobagMsg.pb.cc  ProtobagMsg.pb.h  ProtobagMsg.proto
c++/protobag_native/: protobag_native.cpp
c++/protobag_test/fixtures/: test.tar
c++/protobag_test/fixtures/PBUtilsTest.TestDynamicMsgFactoryBasic/: moof.proto  moof_pb2.py  print_fd.py
c++/protobag_test/fixtures/ReadSessionDirectory.TestBasic/topic1/: 1.protobin  2.protobin
c++/protobag_test/fixtures/ReadSessionDirectory.TestBasic/topic2/: 1.protobin
c++/protobag_test/protobag/: ArchiveUtilTest.cpp  DemoTest.cpp  EntryTest.cpp  ProtobagTest.cpp  ReadSessionTest.cpp  WriteSessionTest.cpp
c++/protobag_test/protobag/Utils/: IterProductsTest.cpp  PBUtilsTest.cpp  ResultTest.cpp  TempfileTest.cpp  TimeSyncTest.cpp
c++/protobag_test/protobag/archive/: ArchiveTest.cpp  DirectoryArchiveTest.cpp  LibArchiveArchiveTest.cpp  MemoryArchiveTest.cpp
c++/protobag_test/protobag_test/: Utils.hpp
cocoa/: README.md
cocoa/ProtobagOSX/: .gitignore  GTestCpp.podspec.json  Podfile  ProtobagCocoaTest.podspec.json  ProtobagPyNative.podspec  PyBind11C++.podspec
cocoa/ProtobagOSX/ProtobagOSX/: main.mm
cocoa/ProtobagOSX/ProtobagOSX.xcodeproj/: project.pbxproj
cocoa/ProtobagOSX/ProtobagOSX.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
cocoa/ProtobagOSX/ProtobagOSX.xcworkspace/: contents.xcworkspacedata
docker/: Dockerfile  protobag_python_test.Dockerfile
examples/c++-writer/: CMakeLists.txt  MyMessages.pb.cc  MyMessages.pb.h  MyMessages.proto  MyWriter.cpp  README.md
examples/notebook-demo/: .gitignore  MyMessages_pb2.py  protobag-demo-full.ipynb
examples/protobag-to-parquet/: my_parquet_writer.py  protobag-demo-full.ipynb
examples/python-reader/: MyMessages_pb2.py  README.md  my_reader.py
examples/python-reader-no-msg-defs/: README.md  my_reader_nodefs.py
examples/python-writer/: .gitignore  my_writer.py
python/: .gitignore  requirements.txt  setup.cfg  setup.py
python/protobag/: ProtobagMsg_pb2.py  __init__.py  protobag.py
python/protobag_test/: test_protobag.py
